config, stylesheet, and theming changes to fix dark mode switcher and multilingual switcher style

--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -16,7 +16,7 @@
     --code-block-bg: rgb(28, 29, 33);
     --code-bg: rgb(245, 245, 245);
     --border: rgb(238, 238, 238);
-    --darkcolor: #a30651;
+    --darkcolor: rgba(163, 6, 81, 0.87);
     --lightcolor: rgba(163, 6, 81, 0.6);
     --semibold: 500;
     --homesize: 16px;
